# drf-api-permissions-postgres

./: README.md  creds.txt  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
blog/: settings.py  urls.py
food/: models.py  serializers.py  urls.py  views.py
food/migrations/: 0001_initial.py
